# NasaRmc2019

./: .gitignore  .gitmodules  .travis.yml  README.md  SourceFile003.c  apt_install_dependencies.sh  build_all.sh  fast_build_all.sh  initialize_jetson_and_robot.sh  install_everything.sh  install_gtest.sh  install_librealsense.exp  install_librealsense.sh  install_lpms_imu_driver.sh  install_opencv_and_contrib.sh  motor_control.py  mouse_droid_dependencies.sh  notes_on_rqt_plugin.txt  riley.py  ros_remote.sh  set_detailed_logging.sh  setupCAN.sh  shallow_2.yaml  shutdownCAN.sh  start_robot.sh  stop_robot.sh
src/: mistakes.txt
src/rqt_ez_publisher/: Test1.perspective
src/tfr_aruco/: CMakeLists.txt  package.xml
src/tfr_aruco/launch/: test_aruco.launch
src/tfr_aruco/src/: aruco_action_server.cpp
src/tfr_can/: CMakeLists.txt  package.xml
src/tfr_can/eds_files/: SC_MC630R11_v_0_7_OD.eds  roboteq_motor_controllers_v60.eds  tfr_epos4_config.dcf
src/tfr_can/launch/: can.launch
src/tfr_can/src/: create_ros_topics_for_can_nodes.cpp
src/tfr_control/: CMakeLists.txt  package.xml
src/tfr_control/config/: arm_model_controller.yaml  controllers.yaml  encoder_limits.yaml
src/tfr_control/launch/: arm_model_control.launch  control.launch  drivebase.launch  raspberry_control.launch  simulation_control.launch
src/tfr_gazebo/: CMakeLists.txt  package.xml
src/tfr_gazebo_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/tfr_monitoring/: CMakeLists.txt  package.xml
src/tfr_sensor/: CMakeLists.txt
src/tfr_utilities/: CMakeLists.txt
(+118 files in other folders)
